# Aruco_Generation_Detection

./: CMakeLists.txt  README.md
config/: CamInternal.yml  config.xml  imglistInternal.xml
markerGeneration/: chess.docx
src/: camera_calibration.cpp  captureImage.cpp  create_marker.cpp  detect_board_charuco.cpp  detect_markers.cpp  detect_markers_33.cpp  generateChessboard.cpp
